--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,9 @@ body {
 }
 
 .sidebar {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 120px;
     height: 100vh;
     border-right: black 1.5px solid;
@@ -71,6 +74,9 @@ body {
 }
 
 .second-sidebar {
+    position: absolute;
+    top: 0;
+    left: 120px;
     width: 300px;
     height: 100vh;
     background-color: #b872f4;
@@ -95,7 +101,12 @@ body {
 }
 
 .container-wrapper {
-  flex-grow: 1; /* Utilisation de flex-grow pour occuper l'espace restant */
+  position: absolute;
+  top: 0;
+  left: 420px;
+  width: 100vh;
+  display: flex;  
+  /* flex-grow: 1; Utilisation de flex-grow pour occuper l'espace restant */
   padding: 20px; /* Ajout de marge pour l'espace autour de container-wrapper */
 }
 
