--- a/calendar/styles.css
+++ b/calendar/styles.css
@@ -10,6 +10,9 @@ body {
 }
 
 #calendar {
+  position: absolute;
+  top: 100px;
+  left: 620px;
   background-color: white;
   border-radius: 10px;
   overflow: hidden;
