--- a/calendar/styles.css
+++ b/calendar/styles.css
@@ -10,6 +10,10 @@ body {
 }
 
 #calendar {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   background-color: white;
   border-radius: 10px;
   overflow: hidden;
@@ -79,3 +83,14 @@ button:hover {
   background-color: #27ae60;
 }
 
+.close-btn {
+  cursor: pointer;
+  color: #fff; /* Couleur du texte */
+  font-size: 20px;
+  top: 5px;
+  right: 5px;
+}
+
+.close-btn:hover {
+  color: #ff0000; /* Couleur du texte au survol */
+}
