--- a/styles.css
+++ b/styles.css
@@ -103,9 +103,11 @@ body {
 .container-wrapper {
   position: absolute;
   top: 20px;
-  right: 10px;
+  right: 70px;
   width: 200px;
-  display: flex;  
+  display: flex;
+  flex-direction: column;
+  align-items: center; 
   /* flex-grow: 1; Utilisation de flex-grow pour occuper l'espace restant */
   padding: 20px; /* Ajout de marge pour l'espace autour de container-wrapper */
 }
@@ -134,7 +136,37 @@ body {
 }
 
 #squareForm{
-  display: none;
+  display: flex;
+  flex-direction: column;
+  padding: 30px;
+  width: 300px;
+  border-radius: 10px;
+  background-color: #fff;
+}
+
+#title{
+  margin: 15px 0 15px 0;
+  height: 50px;
+  border-radius: 15px;
+}
+
+#description{
+  margin: 15px 0 15px 0;
+  height: 50px;
+  border-radius: 15px;
+}
+
+#category{
+  margin: 15px 0 15px 0;
+  height: 30px;
+  border-radius: 15px;
+
+}
+
+#addSquareButton{
+  height: 30px;
+  margin-top: 20px;
+  border-radius: 15px;
 }
 
 .square h2 {
